--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.7.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-headroom": "^3.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select-search": "^0.10.1",
